@@ -1,7 +1,6 @@
 package com.example.builderit.converter;
 
 import com.example.builderit.dto.UserDto;
-import com.example.builderit.enums.UserRole;
 import com.example.builderit.models.User;
 import org.springframework.stereotype.Component;
 
@@ -12,7 +11,7 @@ public class UserToUserDtoConverter extends Converter <User, UserDto>{
       UserDto userDto = new UserDto();
       userDto.setId(user.getId());
       userDto.setLogin(user.getLogin());
-      userDto.setUserRole(user.getUserRoles().stream().toList().get(0).name());
+      userDto.setUserRole(user.getUserRoles().stream().toList().getFirst().name());
 
         return userDto;
     }
